crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_close_standalone_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..7
  HTML_BLOCK@0..7
    HTML_BLOCK_TAG@0..7
      TEXT@0..6 "</div>"
      NEWLINE@6..7 "\n"
