crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_definition_body_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 99
expression: cst_output
---
DOCUMENT@0..30
  PARAGRAPH@0..5
    TEXT@0..4 "Term"
    NEWLINE@4..5 "\n"
  BLANK_LINE@5..6
    BLANK_LINE@5..6 "\n"
  PARAGRAPH@6..30
    TEXT@6..10 ":   "
    INLINE_HTML@10..22
      INLINE_HTML_CONTENT@10..22 "<div id=\"d\">"
    TEXT@22..23 "x"
    INLINE_HTML@23..29
      INLINE_HTML_CONTENT@23..29 "</div>"
    NEWLINE@29..30 "\n"
