crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_definition_body_later_line_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..50
  PARAGRAPH@0..5
    TEXT@0..4 "Term"
    NEWLINE@4..5 "\n"
  BLANK_LINE@5..6
    BLANK_LINE@5..6 "\n"
  PARAGRAPH@6..15
    TEXT@6..14 ":   text"
    NEWLINE@14..15 "\n"
  BLANK_LINE@15..16
    BLANK_LINE@15..16 "\n"
  CODE_BLOCK@16..50
    CODE_CONTENT@16..50
      WHITESPACE@16..20 "    "
      TEXT@20..32 "<div id=\"d\">"
      NEWLINE@32..33 "\n"
      WHITESPACE@33..37 "    "
      TEXT@37..38 "x"
      NEWLINE@38..39 "\n"
      WHITESPACE@39..43 "    "
      TEXT@43..49 "</div>"
      NEWLINE@49..50 "\n"
