crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_definition_body_multiline_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..40
  PARAGRAPH@0..5
    TEXT@0..4 "Term"
    NEWLINE@4..5 "\n"
  BLANK_LINE@5..6
    BLANK_LINE@5..6 "\n"
  PARAGRAPH@6..40
    TEXT@6..10 ":   "
    INLINE_HTML@10..22
      INLINE_HTML_CONTENT@10..22 "<div id=\"d\">"
    NEWLINE@22..23 "\n"
    TEXT@23..28 "    x"
    NEWLINE@28..29 "\n"
    TEXT@29..33 "    "
    INLINE_HTML@33..39
      INLINE_HTML_CONTENT@33..39 "</div>"
    NEWLINE@39..40 "\n"
