crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_definition_body_multiline_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..40
  DEFINITION_LIST@0..40
    DEFINITION_ITEM@0..40
      TERM@0..5
        TEXT@0..4 "Term"
        NEWLINE@4..5 "\n"
      BLANK_LINE@5..6
        BLANK_LINE@5..6 "\n"
      DEFINITION@6..40
        DEFINITION_MARKER@6..7 ":"
        WHITESPACE@7..10 "   "
        HTML_BLOCK_DIV@10..40
          HTML_BLOCK_TAG@10..23
            TEXT@10..14 "<div"
            WHITESPACE@14..15 " "
            HTML_ATTRS@15..21
              TEXT@15..19 "id=\""
              ATTR_ID@19..20 "d"
              TEXT@20..21 "\""
            TEXT@21..22 ">"
            NEWLINE@22..23 "\n"
          PARAGRAPH@23..29
            WHITESPACE@23..27 "    "
            TEXT@27..28 "x"
            NEWLINE@28..29 "\n"
          HTML_BLOCK_TAG@29..40
            WHITESPACE@29..33 "    "
            TEXT@33..39 "</div>"
            NEWLINE@39..40 "\n"
